# pyerc20

./: README.md  pyproject.toml
pyerc20/erc20/: __init__.py  erc20.py
pyerc20/weth/: _abi.py  weth.py
