[tool.poetry]
name = "pyerc20"
version = "0.1.0"
description = ""
homepage = "https://github.com/zhouflower/pyerc20"
repository = "https://github.com/zhouflower/pyerc20"
authors = ["Hongxia Zhou <zhouhongxia5276@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
eth-account = "^0.11.0"
py-eth-contract = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
